Fix alignment issues on mobile for footer

--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ p {
     position: sticky;
     z-index: 3;
     top: 0px;
-    background-color: #000000f8;
+    background-color: #000000eb;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -261,7 +261,7 @@ section h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #000000f8;
+    background-color: #000000eb;
     color: white;
     padding: 1.5rem;
     gap: 1rem;
@@ -269,13 +269,8 @@ section h2 {
 }
 
 .biryaniSpiceLogo {
-    width: 70px;
-    height: 70px;
-}
-
-.email {
-    overflow-wrap: anywhere;
-    word-break: break-word;
+    width: 60px;
+    height: 60px;
 }
 
 .footer .phoneLink {
@@ -290,8 +285,14 @@ section h2 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    flex-grow: 2;
+    flex-basis: 260px;
 }
 
 .footerInfo p {
     font-size: 0.9rem;
+}
+
+.restaurantLogoDiv {
+    flex-grow: 1;
 }
